[package]
name = "raytracer_in_a_weekend"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[dependencies]
glutin = "0.22.0-alpha3"
winit = "0.20.0-alpha3"
takeable-option = "0.5.0"
image = "0.22.1"
cgmath = "0.17.0"
rand = "0.7.0"
crossbeam = "0.7.2"

[build-dependencies]
gl_generator = "0.11"
